# quantum-computing

./: .gitignore  Makefile  Makefile.am  README.md  bootstrap.sh  configure.ac
.github/: latex.yaml
.github/workflows/: cloudbot.yml  latex.yaml
aws/: rigetti.py
docs/slides/: future.tex
ibm/: requirements.txt
presentation/: Makefile  future.tex  preamble.tex
src/aws/: Makefile.am  franklin.py  test_ocean.py
src/dwave/: README.md  requirements.txt
src/google/: cirq2.py
